# meta_kosmos_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
config/: default.toml
config/jupyter/: default.toml
config/venus/: default.toml
crates/meta_address/: Cargo.toml  README.md  build.rs
crates/meta_address/src/: enums.rs  lib.rs
crates/meta_address/static/: bot_address.json  dex_address.json  rpc.json  token_address.json
crates/meta_alchemy/: Cargo.toml  README.md
crates/meta_alchemy/examples/: replay_transaction.rs
crates/meta_alchemy/src/: errors.rs  evm.rs  flashbots.rs  lib.rs  oracle.rs  pool.rs
crates/meta_alchemy/src/fork_db/: database_error.rs  fork_db.rs  fork_factory.rs  global_backend.rs  mod.rs
crates/meta_alchemy/src/inspectors/: mod.rs
crates/meta_alchemy/src/storage/: mod.rs
crates/meta_alchemy/src/storage/code/: mod.rs
crates/meta_alchemy/src/storage/slots/: erc20.rs  mod.rs  uni_v2.rs  uni_v3.rs
crates/meta_bots/: Cargo.toml  README.md
crates/meta_bots/examples/: approve_token.rs  bloxroute.rs  delay.rs  notify.rs  on_chain_interaction.rs
crates/meta_bots/src/: lib.rs  venus.rs
crates/meta_bots/src/forked_db/: fork_db.rs  fork_factory.rs  global_backend.rs  mod.rs
crates/meta_bots/src/mev_bots/: alert.rs  bundle.rs  crypto.rs  helpers.rs  mod.rs  oracle_runner.rs  relay.rs  sandwidth.rs  testhelpder.rs
crates/meta_bots/src/mev_bots/braindance/: encode.rs  mod.rs
crates/meta_bots/src/mev_bots/simulation/: errors.rs  make_sandwidth.rs  mod.rs  simulate.rs
crates/meta_bots/src/mev_bots/simulation/inspectors/: access_list.rs  is_sando_safu.rs  mod.rs
crates/meta_bots/src/mev_bots/types/: errors.rs  mod.rs  raw_ingredient.rs  types.rs
crates/meta_cefi/: Cargo.toml  README.md
crates/meta_cefi/examples/: binance_market.rs  binance_rest.rs  binance_rest_async.rs  binance_rest_sync.rs  binance_ws.rs  binance_ws_async.rs  binance_ws_auth.rs  binance_ws_sync.rs  binance_ws_trade.rs  bitfinex_ob.rs  bitfinex_rest_api.rs  bitfinex_rest_sync.rs  bitfinex_submit_order.rs  bitfinex_ws.rs  bitfinex_ws_async.rs  bitfinex_ws_auth.rs  bitfinex_ws_sync.rs  cell.rs  core.rs
crates/meta_cefi/src/: api.rs  cefi_service.rs  enums.rs  lib.rs  model.rs  util.rs  websockets.rs
crates/meta_cefi/src/binance/: account.rs  api.rs  client.rs  constants.rs  general.rs  handler.rs  market.rs  mod.rs  model.rs  util.rs  websockets.rs  websockets_tokio.rs
crates/meta_cefi/src/binance/http/: credentials.rs  error.rs  mod.rs  request.rs
crates/meta_cefi/src/binance/hyper/: client.rs  error.rs  response.rs
crates/meta_cefi/src/binance/stream/: market.rs  mod.rs
crates/meta_cefi/src/binance/stream/user_data/: close_listen_key.rs  mod.rs  new_listen_key.rs  renew_listen_key.rs
crates/meta_cefi/src/binance/trade/: get_order.rs  mod.rs  new_order.rs  order.rs
crates/meta_cefi/src/bitfinex/: account.rs  api.rs  auth.rs  book.rs  client.rs  common.rs  errors.rs  events.rs  handler.rs  mod.rs  model.rs  orders.rs  symbol.rs  wallet.rs  websockets.rs  websockets_tokio.rs
crates/meta_common/: Cargo.toml
crates/meta_common/src/: lib.rs
crates/meta_common/src/constants/: constants.rs  mod.rs
crates/meta_common/src/enums/: bot.rs  cex.rs  chain.rs  dex.rs  mod.rs  provider.rs  token.rs  universal.rs
crates/meta_common/src/models/: mod.rs
crates/meta_common/src/traits/: mod.rs
crates/meta_contracts/: Cargo.toml  READEME.md  README.md  build.rs  remappings.txt
crates/meta_contracts/cache/: solidity-files-cache.json
crates/meta_contracts/contracts/: FlashBotsRouter.sol  FlashBotsUniswapQuery.sol  Migration.sol  MuteSyncAtomicSwap.sol
crates/meta_contracts/contracts/huff/: sandwidth.bsc.huff  sandwidth.eth.goerli.huff  sandwidth.eth.huff
crates/meta_contracts/contracts/interfaces/: AaveV2Interfaces.sol  FlashBotsInterface.sol  IMuteSyncAtomicSwap.sol
crates/meta_contracts/src/: lib.rs
crates/meta_contracts/src/bindings/: erc20.rs  flashbotsrouter.rs  migration.rs  mod.rs  muteswitchfactory.rs  nonfungibletokenpositiondescriptor.rs  quoterv2.rs  swaprouter.rs  uniswapv2factory.rs  uniswapv2pair.rs  uniswapv2router02.rs  uniswapv3factory.rs  uniswapv3pool.rs  weth9.rs
crates/meta_contracts/src/wrappers/: erc20.rs  mod.rs  muteswitch_factory.rs  uniswap_v2.rs
crates/meta_contracts/static/abis/mute_switch/: factory.json  pair.json
crates/meta_contracts/static/abis/test/: Migration.json
crates/meta_contracts/static/abis/token/: ERC20.json
crates/meta_contracts/static/abis/uniswap_v2/: UniswapV2Router02.json  WETH9.json
crates/meta_dex/: Cargo.toml
crates/meta_dex/examples/: order.rs  providers.rs  submit_order.rs  subscribe_contract_logs.rs
crates/meta_dex/src/: defi.rs  error.rs  lib.rs  pool.rs
crates/meta_dex/src/enums/: mod.rs
crates/meta_dex/src/oracle/: mod.rs
crates/meta_dex/src/sandwidth/: mod.rs  v2.rs
crates/meta_integration/: Cargo.toml
crates/meta_integration/examples/: lark.rs
crates/meta_integration/src/: lib.rs
crates/meta_macro/: Cargo.toml
crates/meta_macro/examples/: chain.rs  delegate.rs  manage.rs
crates/meta_macro/src/: attr.rs  chain.rs  lib.rs  symbol.rs
crates/meta_mev_service/: Cargo.toml
crates/meta_mev_service/src/: club48.rs  lib.rs
crates/meta_model/: Cargo.toml
crates/meta_model/src/: lib.rs
crates/meta_python/: Cargo.toml  README.md  demo.py
crates/meta_python/src/: lib.rs
crates/meta_tracing/: Cargo.toml
crates/meta_tracing/src/: lib.rs
crates/meta_util/: Cargo.toml
crates/meta_util/src/: enums.rs  eth.rs  lib.rs
crates/meta_util/src/decimal/: mod.rs
crates/meta_util/src/defi/: mod.rs
crates/meta_util/src/ether/: address.rs  codec.rs  hash.rs  mod.rs  protocol.rs  wei.rs
crates/meta_util/src/time/: mod.rs
docs/: cast.md
docs/rust/: faq.md
docs/venus/: arb_usd.md
