[workspace]
members = [
    "crates/meta_bots",
    "crates/meta_common",
    "crates/meta_util",
    "crates/meta_tracing",
    "crates/meta_address",
    "crates/meta_contracts",
    "crates/meta_dex",
    "crates/meta_mev_service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"]}
quote = "1"
hex = "0.4"
rand = "0.8"
lazy_static = "1.4.0"
once_cell = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
# blockchain
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", 'ipc', "legacy", "rustls"] }
# web
http = {version = "0.2.9"}
# async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3"
# error
eyre = "0.6.8"
anyhow = "1.0.32"
thiserror = "1.0"
# tracing
tracing = "0.1.29"
# misc
indicatif = "0.17.1"
