[workspace]
members = [
    "crates/meta_bots",
    "crates/meta_common",
    "crates/meta_util",
    "crates/meta_tracing",
    "crates/meta_address",
    "crates/meta_contracts",
    "crates/meta_dex",
    "crates/meta_mev_service",
    "crates/meta_cefi",
    "crates/meta_alchemy",
    "crates/meta_macro",
]
exclude = ["crates/meta_python", "crates/meta_alchemy"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
# data
hex = "0.4"
rand = "0.8"
lazy_static = "1.4.0"
once_cell = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
## feature serde-with-arbitrary-precision is required; check https://github.com/gakonst/ethers-rs/issues/2451
rust_decimal = { version = "1", features = [
    "maths",
    "serde-float",
    "serde-with-arbitrary-precision",
] }
dashmap = "5.4"
hashbrown = "0.13.2"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
convert_case = "0.6"
# blockchain
ethers = { version = "2.0.0" , features = ["ws"]}
revm = { git = "https://github.com/bluealloy/revm/" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", default-features = false }
# web
http = { version = "0.2.9" }
# async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
# network
reqwest = { version = "0.11", features = ["json", "blocking"] }
# crypto
ring = "0.16"
# error
eyre = "0.6.8"
anyhow = "1.0.32"
thiserror = "1.0"
# tracing
tracing = "0.1.29"
colored = "2.0.0"
# misc
indicatif = "0.17.1"
# CLI
gumdrop = "0.8.0"


[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm/", rev = "6b55b9c0ab264c000e087c2f54f2d8dc24b869aa" }
