[workspace]
members = [
    "crates/meta_bots",
    "crates/meta_common",
    "crates/meta_util",
    "crates/meta_tracing",
    "crates/meta_address",
    "crates/meta_contracts",
    "crates/meta_dex",
    "crates/meta_mev_service",
    "crates/meta_cefi",
    "crates/meta_alchemy",
    "crates/meta_macro",
    "crates/meta_integration",
    "crates/meta_model"
]
exclude = ["crates/meta_python", "crates/meta_alchemy"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
# data
hex = "0.4"
rand = "0.8"
lazy_static = "1.4.0"
once_cell = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.1"
## feature serde-with-arbitrary-precision is required; check https://github.com/gakonst/ethers-rs/issues/2451
rust_decimal = { version = "1", features = [
    "maths",
    "serde-float",
    "serde-with-arbitrary-precision",
] }
rust_decimal_macros = "1.24.0"
dashmap = "5.4"
hashbrown = "0.13.2"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
convert_case = "0.6"
uuid= {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
# blockchain
ethers = { version = "2.0.0" , features = ["ws"]}
revm = { git = "https://github.com/bluealloy/revm/" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", default-features = false }
# web
http = { version = "0.2.9" }
hyper = { version = "0.14.16", features = ["full"]}
hyper-tls = {version = "0.5.0" }
# async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
# network
reqwest = { version = "0.11", features = ["json", "blocking"] }
# crypto
hmac = "0.12.1"
ring = "0.16"
rsa = { version = "0.7.1", features = ["pkcs5"] }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
signature = "1.6.4"
# error
eyre = "0.6.8"
anyhow = "1.0.32"
thiserror = "1.0"
# tracing
tracing = "0.1.29"
colored = "2.0.0"
# misc
indicatif = "0.17.1"
chrono = "0.4.30"
# CLI
gumdrop = "0.8.0"
# cpu
core_affinity = "0.8.1"
crossbeam-channel = "0.5.8"

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm/", rev = "6b55b9c0ab264c000e087c2f54f2d8dc24b869aa" }
