[package]
name = "meta_address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
meta_common = { path = "../meta_common" }
# Data
serde = "1.0.130"
serde_json = "1.0.57"
lazy_static = "1.4.0"
once_cell = "1.10.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", 'ipc', "legacy", "rustls"] }