[package]
name = "meta_address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
meta_common = { path = "../meta_common" }
# Data
serde.workspace=true
serde_json.workspace=true
lazy_static.workspace=true
once_cell.workspace=true
ethers.workspace=true