[package]
name = "meta_address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
meta_common = { path = "../meta_common" }
meta_util = { path = "../meta_util" }
meta_macro = { path = "../meta_macro" }
# Data
serde.workspace=true
serde_json.workspace=true
lazy_static.workspace=true
once_cell.workspace=true
strum.workspace=true
strum_macros.workspace=true
ethers.workspace=true

[build-dependencies]
anyhow.workspace=true
syn.workspace=true
proc-macro2.workspace=true
quote.workspace=true
serde_json.workspace=true