[package]
name = "meta_alchemy"
version = "0.1.0"
edition = "2021"

[dependencies]
# workspace
meta_util = { path = "../meta_util" }
meta_common = { path = "../meta_common" }
meta_address = { path = "../meta_address" }
meta_contracts = { path = "../meta_contracts" }
meta_dex = { path = "../meta_dex" }
# ether
ethers.workspace = true
revm.workspace = true
# foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", rev = "7170f7223a0fd2c6980d1c36d359e38b580d3e02"}
# Data
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
dashmap.workspace = true
hashbrown.workspace = true
hex.workspace = true
rust_decimal.workspace = true
# http
reqwest.workspace = true
# async
tokio.workspace = true
futures-util.workspace = true
futures.workspace = true
# CLI
gumdrop.workspace = true
# error
eyre.workspace = true
anyhow.workspace = true
thiserror.workspace = true
