[package]
name = "meta_cefi"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
meta_common= {path="../meta_common"}
meta_util= {path="../meta_util"}
meta_address= {path="../meta_address"}
meta_tracing= {path="../meta_tracing"}
# async
tokio.workspace=true
futures-util.workspace=true
# web
reqwest.workspace=true
tungstenite.workspace=true
tokio-tungstenite.workspace=true
url = "2.2.2"
http.workspace=true
hyper.workspace=true
hyper-tls.workspace=true
# data
lazy_static.workspace=true
hashbrown.workspace=true
hex.workspace=true
serde.workspace=true
serde_json.workspace=true
rust_decimal.workspace=true
rust_decimal_macros.workspace=true
strum.workspace=true
strum_macros.workspace=true
uuid.workspace=true
once_cell.workspace=true
base64.workspace=true
rand.workspace=true
# crypto
hmac.workspace=true
sha2.workspace=true
ring.workspace=true
rsa.workspace=true
signature.workspace=true
# tracing
tracing.workspace=true
# error
anyhow.workspace=true
eyre.workspace=true
thiserror.workspace=true
error-chain = { version = "0.12.4", default-features = false }
# cpu
core_affinity.workspace=true
crossbeam-channel.workspace=true

[dev-dependencies]
# tokio = { version = "1", features = ["full"] }
# env_logger = "0.10.0"
tower = "0.4.12"