[package]
name = "meta_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Data
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = "1.0.57"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
hex = "0.4.3"
