[package]
name = "meta_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Data
serde.workspace=true
serde_json.workspace=true
strum.workspace=true
strum_macros.workspace=true
hex.workspace=true
lazy_static.workspace=true
ethers.workspace=true
rust_decimal.workspace=true