[package]
name = "meta_contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
meta_common= {path="../meta_common"}
meta_util= {path="../meta_util"}

ethers.workspace=true
futures.workspace=true
tracing.workspace=true
# Data
lazy_static.workspace=true

[dev-dependencies]
mockall="0.11.3"

[build-dependencies]
ethers.workspace=true
