[package]
name = "meta_macro"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# workspace
meta_common= {path="../meta_common"}
meta_util= {path="../meta_util"}
proc-macro2.workspace=true
syn = {workspace = true}
quote = {workspace = true}
hex.workspace=true
convert_case.workspace=true