[package]
name = "meta_mev_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta_util = {path = "../meta_util"}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.57"
tokio = { version = "1", features = ["full"] }