[package]
name = "meta_mev_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta_util = {path = "../meta_util"}
reqwest = { version = "0.11", features = ["json"] }
serde.workspace=true
serde_json.workspace=true
tokio = { version = "1", features = ["full"] }