[package]
name = "meta_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta_common = { path = "../meta_common" }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "ws",
    'ipc',
    "legacy",
    "rustls",
] }
# Data
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = "1.0.57"
hex = "0.4.3"
