[package]
name = "meta_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta_common = { path = "../meta_common" }
ethers.workspace=true
# ether
revm.workspace=true
# Data
serde.workspace=true
serde_json.workspace=true
hex.workspace=true
rust_decimal.workspace=true
lazy_static.workspace=true
